After choosing Universal Plug'n'Play it shows nothing there.
Only message: Playlist is currently empty, after few clicking "Universal Plug'n'Play" this message changes to blank.
Tested on:
vlc-3.0.0-git-20150502-0002-win32.zip
Windows 7 32bit.
Try run in admin mode and user mode.
DLNA servers:
xupnpd 1.033
minidlna
Vlc 2.0.8 still works ok.
To upload designs, you'll need to enable LFS and have an admin enable hashed storage. More information
Child items
...
Linked items
0
Link issues together to show that they're related.
Learn more.
core debug: adding services_discovery upnp{longname="Universal Plug'n'Play"}...core debug: looking for services_discovery module matching "upnp": 8 candidatesupnp info: Initializing libupnp on '(null)' interfaceupnp error: Initialization failed: UPNP_E_SOCKET_ERRORcore debug: no services_discovery modules matchedcore error: no suitable services discovery module
vlc208 (works ok):
main debug: adding services_discovery upnp{longname="Universal Plug'n'Play"}...main debug: rebuilding array of current - root Плейлистmain debug: rebuild done - 0 items, index -1main debug: looking for services_discovery module: 1 candidateupnp debug: Adding server 'UPnP-IPTV' with uuid 'uuid:60bd2fb3-dabe-cb14-c766-0e319b54c29a'main debug: Adding UPnP-IPTV in (null)main debug: rebuilding array of current - root Плейлистmain debug: rebuild done - 0 items, index -1main debug: Creating an input for 'UPnP-IPTV'main debug: no fetch required for (null) (art currently (null))main debug: using services_discovery module "upnp"main debug: TIMER module_need() : 235.349 ms - Total 235.349 ms / 1 intvls (Avg 235.349 ms)qt4 debug: Normal PL/ML or SDmain debug: rebuilding array of current - root Плейлистmain debug: rebuild done - 0 items, index -1main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))main debug: no fetch required for (null) (art currently (null))upnp warning: Server with uuid 'uuid:60bd2fb3-dabe-cb14-c766-0e319b54c29a' already exists.upnp warning: search timeoutupnp warning: Server with uuid 'uuid:60bd2fb3-dabe-cb14-c766-0e319b54c29a' already exists.upnp warning: Server with uuid 'uuid:60bd2fb3-dabe-cb14-c766-0e319b54c29a' already exists.upnp warning: Server with uuid 'uuid:60bd2fb3-dabe-cb14-c766-0e319b54c29a' already exists.upnp warning: Server with uuid 'uuid:60bd2fb3-dabe-cb14-c766-0e319b54c29a' already exists.upnp warning: Server with uuid 'uuid:60bd2fb3-dabe-cb14-c766-0e319b54c29a' already exists.upnp warning: Server with uuid 'uuid:60bd2fb3-dabe-cb14-c766-0e319b54c29a' already exists.
Also will check vlc on win 8.1 after 4 may.
Starting from bugs like 9501/14333 (problem with content browse), there was some strangeness, part of users say that it's ok(for devices find), but thay check it on win8.1 64bit.
May be it is something wrong there with 32/64 bit part?
commit bec798ac
Author: Hugo Beauzée-Luyssen hugo@beauzee.fr
Date: Mon May 11 18:19:26 2015 +0200
upnp: Fix some libupnp bugsThose patches prevent an infinite loop when specifying an interface name, andavoid using a down interface as the defautl interface.fix [#14526](https://code.videolan.org/videolan/vlc/-/issues/14526)
(All builds after 20150308, fail to parse/browse the child containers (plugin rewrite?))
However, recently, those same builds were failing with -\
upnp info: Initializing libupnp on '(null)' interface\
upnp error: Initialization failed: UPNP_E_SOCKET_ERROR\
After trial and error, I was able to get the above builds to work again by disabling the _Microsoft Virtual Wifi Miniport Adapter_.
1. Observations for the specific versions listed above:\
Virtual Adapter enabled - UPNP_E_SOCKET_ERROR
\
Virtual Adapter disabled - UPnP enumeration/parsing success\
Virtual Adapter enabled, with IPv4 unbound(unchecked) - UPnP enumeration/parsing success\
(This was over a _physical wifi adapter_ active connection using IPv4)
2. Observations in testing the most recent versions, including vlc-3.0.0-git-20150704-0402-win64:\
a) The MSFT Virtual Wifi Miniport Adapter can remain enabled.\
b) However the child objects in the containers are still not enumerated/listed.
Consequently, my current workaround is to use the versions that tested ok above, and disable the Virtual Adapter.