upnp: lookup the best interface to use libupnp with

libupnp cannot handle more than one interface/IP at a time, so we need to make
sure we use an appropriate one.
Original patch by: Steve Lhomme <robux4@videolabs.io>

Fix #14526